236 re implement programmatic role initialization (#237)
* chore: re-allow programmatic role initialization